更新对称加密算法，完善权限字模块功能

--- a/src/main/resources/templates/zx.m/index.html
+++ b/src/main/resources/templates/zx.m/index.html
@@ -26,7 +26,7 @@
 
 </head>
 
-<body data-ng-class="{ 'sw-toggled': mactrl.layoutType === '1'}">
+<body class="cOverflow" data-ng-class="{ 'sw-toggled': mactrl.layoutType === '1'}">
 
     <data ui-view=""></data>
 
