--- a/src/main/resources/templates/zx.m/system/permission-wd.html
+++ b/src/main/resources/templates/zx.m/system/permission-wd.html
@@ -15,30 +15,29 @@
 	            </li>
 	        </ul>
         </div>
-        <div class="card-body table-responsive">
-			<table class="table table-hover">
-				<thead>
-				    <tr>
-				        <th>#</th>
-				        <th>权限字名称</th>
-				        <th>权限字代码</th>
-				        <th>权限字描述</th>
-				        <th>操作</th>
-				    </tr>
-				</thead>
-				<tbody>
-					<tr ng-repeat="w in pctrl.permissions.data">
-					    <td>{{ $index+1 }}</td>
-					    <td>{{ w.permissionName }}</td>
-					    <td>{{ w.permissionCode }}</td>
-					    <td>{{ w.permissionDescript }}</td>
-					    <td width="180">
-					        <button type="button" class="btn btn-warning btn-icon-text btn-sm" ng-click="w.$edit = true"><i class="zmdi zmdi-edit"></i> 编辑</button>
-					        <button type="button" class="btn btn-danger btn-icon-text btn-sm" ng-click="w.$edit = true"><i class="zmdi zmdi-edit"></i> 删除</button>
-					    </td>
-					</tr>
-				</tbody>
-			</table>
+        <div class="card-body">
+            <div class="table-responsive">
+                <table ng-table="pctrl.datatable" class="table table-striped table-vmiddle">
+                    <tr ng-repeat="w in $data">
+                        <td data-title="'#'">
+                            {{ $index+1 }}
+                        </td>
+                        <td data-title="'权限字名称'">
+                            {{ w.permissionName }}
+                        </td>
+                        <td data-title="'权限字代码'">
+                            {{ w.permissionCode }}
+                        </td>
+                        <td data-title="'权限字描述'">
+                            {{ w.permissionDescript }}
+                        </td>
+                        <td data-title="'操作'" width="180">
+					        <button type="button" class="btn btn-warning btn-icon-text btn-sm" ng-click="pctrl.to_edit(w.permissionId)"><i class="zmdi zmdi-edit"></i> 编辑</button>
+					        <button type="button" class="btn btn-danger btn-icon-text btn-sm" ng-click="pctrl.del_it(w.permissionId, w.permissionName)"><i class="zmdi zmdi-edit"></i> 删除</button>
+                        </td>
+                    </tr>
+                </table>
+            </div>
         </div>
     </div>
 </div>
